--- a/app/views/schedules/index.html.slim
+++ b/app/views/schedules/index.html.slim
@@ -11,16 +11,14 @@
         h1.col.text-left
           = schedule.workout.name
         i.col.text-right
-          = schedule.program.name
+          = link_to schedule.program.name, schedule.program
       .row
         p.col #{schedule.workout.notes}
       .row
         p.col #{workout_objective schedule.workout}
       .row
         ul.list-unstyled.col
-          - schedule.workout.exercises.each do |exercise|
-            li = measurable_message(exercise)
-          = simple_format schedule.workout.notes
+          = render partial: 'exercises/exercises', object: schedule.workout.exercises.order(:position)
       .row
         .col-12
           = link_to 'Log', new_workout_log_path(schedule.workout), class: 'btn btn-block btn-outline-primary'
