--- a/app/views/workouts/_form.html.slim
+++ b/app/views/workouts/_form.html.slim
@@ -1,6 +1,6 @@
-= simple_form_for @workout, wrapper: :input_group do |f|
+= simple_form_for @workout, wrapper: :vertical_form do |f|
   = f.error_notification
-  .form-inputs.row
+  .form-inputs.form-row
     .col-12 = f.input :name, input_html: { value: f.object.name || generate_workout_name }
     .col-sm-4 = f.input :rounds
     .col-sm-4 = f.input :time, as: :group, append: 'minutes'
