--- a/app/views/workouts/_form.html.slim
+++ b/app/views/workouts/_form.html.slim
@@ -6,7 +6,7 @@
     .col-sm-4 = f.input :time, as: :group, append: 'minutes'
     .col-sm-4 = f.input :interval, placeholder: '21-15-9...'
     = f.simple_fields_for :metric do |metric_form|
-      .col-12 = metric_form.input :measurement, collection: Metric.measurements, label: 'For'
+      .col-12 = metric_form.input :measurement, collection: Metric.workout_measurements, label: 'For'
     .col = f.input :notes
   hr
   h3 Exercises
