Add some minor tweaks

--- a/app/views/workouts/show.html.slim
+++ b/app/views/workouts/show.html.slim
@@ -64,4 +64,4 @@
           = f.input :workout_id, as: :hidden, value: @workout.id
         .modal-footer
           = link_to 'Cancel', nil, class: 'btn btn-secondary', data: { dismiss: "modal" }
-          = f.button :submit, class: 'btn btn-primary'
+          = f.button :submit, 'Add to Schedule', class: 'btn btn-primary'
