--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,9 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import "bootstrap";
+@import "bootstrap/scss/bootstrap";
 @import "segments";
-// @import "selectize/dist/css/selectize.bootstrap3";
 @import "selectize-bootstrap4-theme/dist/css/selectize.bootstrap4";
 
 .auth-links {
