--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,10 +3,13 @@ html lang="en"
   head
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
     meta charset="utf-8"
+
     title WOD Tracker
     = csrf_meta_tags
+    = csp_meta_tag
+
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     script[defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"]
   body
     - if user_signed_in?
