--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -7,10 +7,12 @@
         = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
           = f.error_notification
           .form-inputs
-            = f.input :email, required: true, autofocus: true
-            = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
-            = f.input :password_confirmation, required: true
+            = f.input :email, required: true, autofocus: true, input_html: { autocomplete: 'email'}
+            = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: 'new-password'}
+            = f.input :password_confirmation, required: true, input_html: { autocomplete: 'new-password'}
+            = f.input :first_name, required: true
+            = f.input :last_name, required: true
           .form-actions
-            = f.button :submit, "Sign up", class: 'btn btn-block btn-success'
+            = f.button :submit, "Sign up", class: 'btn-block btn-success'
     .text-center
       = render "devise/shared/links"
