Add weight to reg form

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -12,6 +12,7 @@
             = f.input :password_confirmation, required: true, input_html: { autocomplete: 'new-password'}
             = f.input :first_name, required: true
             = f.input :last_name, required: true
+            = f.input :weight, required: true
           .form-actions
             = f.button :submit, "Sign up", class: 'btn-block btn-success'
     .text-center
