--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,19 +1,13 @@
-.row.justify-content-center.mt-5
-  .col-11.col-sm-10.col-md-8.col-lg-6.col-xl-4
-    .card
-      .card-header
-        h2 Sign up
-      .card-body
-        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-          = f.error_notification
-          .form-inputs
-            = f.input :email, required: true, autofocus: true, input_html: { autocomplete: 'email'}
-            = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: 'new-password'}
-            = f.input :password_confirmation, required: true, input_html: { autocomplete: 'new-password'}
-            = f.input :first_name, required: true
-            = f.input :last_name, required: true
-            = f.input :weight, required: true
-          .form-actions
-            = f.button :submit, "Sign up", class: 'btn-block btn-success'
-    .text-center
-      = render "devise/shared/links"
+- content_for :header
+  | Sign up
+= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = f.error_notification
+  .form-inputs
+    = f.input :email, required: true, autofocus: true, input_html: { autocomplete: 'email'}
+    = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: 'new-password'}
+    = f.input :password_confirmation, required: true, input_html: { autocomplete: 'new-password'}
+    = f.input :first_name, required: true
+    = f.input :last_name, required: true
+    = f.input :weight, required: true
+  .form-actions
+    = f.button :submit, "Sign up", class: 'btn-block btn-success'
