--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,4 +1,4 @@
-.row.justify-content-center.mt-5
+.row.justify-content-center.my-5
   .col-12.col-md-8.col-lg-6
     h2 Edit #{resource_name.to_s.humanize}
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
