--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -9,5 +9,5 @@
     = f.input :first_name, required: true
     = f.input :last_name, required: true
     = f.input :weight, required: true
-  .form-actions
-    = f.button :submit, "Sign up", class: 'btn-block btn-success'
+  .form-actions.d-grid
+    = f.button :submit, "Sign up", class: 'btn btn-success'
