--- a/app/views/exercises/_exercises.html.slim
+++ b/app/views/exercises/_exercises.html.slim
@@ -3,7 +3,7 @@
     - if exercise.segment.present?
       - unless in_segment
         li = segment_objective(exercise.segment)
-      li.ml-4 #{measurable_message(exercise)}
+      li.ms-4 #{measurable_message(exercise)}
     - else
       li #{measurable_message(exercise)}
     - in_segment = exercise.segment.present?
