--- a/app/views/workouts/_segment_fields.html.slim
+++ b/app/views/workouts/_segment_fields.html.slim
@@ -4,12 +4,12 @@
       .col = f.input :rounds
       .col = f.input :time
       .col = f.input :interval
-    .form-row
+    .row
       .col#segmented_exercises
         = f.simple_fields_for :exercises do |exercise_form|
           = render 'exercise_fields', f: exercise_form
-        .links
-          = link_to_add_association 'Add Exercise', f, :exercises, class: 'btn btn-sm btn-outline-primary btn-block'
-    .form-row
-      .col
-        = link_to_remove_association 'Delete Segment', f, class: 'btn btn-sm btn-danger btn-block mt-2'
+        .links.d-grid
+          = link_to_add_association 'Add Exercise', f, :exercises, class: 'btn btn-sm btn-outline-primary'
+    .row
+      .col.d-grid
+        = link_to_remove_association 'Delete Segment', f, class: 'btn btn-sm btn-danger mt-2'
