--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -7,5 +7,5 @@
   .form-inputs
     = f.input :password, label: 'New password', required: true, autofocus: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
     = f.input :password_confirmation, label: 'Confirm your new password', required: true
-  .form-actions">
+  .form-actions
     = f.button :submit, 'Change my password'
