--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -4,5 +4,5 @@
   = f.error_notification
   .form-inputs
     = f.input :email, required: true, autofocus: true
-  .form-actions
-    = f.button :submit, "Send me reset password instructions", class: 'btn-block btn-outline-primary'
+  .form-actions.d-grid
+    = f.button :submit, "Send me reset password instructions", class: 'btn btn-outline-primary'
