--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -13,7 +13,7 @@
  */
 @import "bootstrap/scss/bootstrap";
 @import "segments";
-@import "selectize-bootstrap4-theme/dist/css/selectize.bootstrap4";
+@import "tom-select/dist/css/tom-select.bootstrap5";
 
 .auth-links {
   li:not(:last-of-type):after {
@@ -23,4 +23,12 @@
 
 .fs-8 {
   font-size: 8pt;
+}
+
+.selectize-control {
+  padding: 0;
+}
+
+.selectize-input {
+  border: 0;
 }
