Add back rails_admin

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,6 +28,7 @@ html lang="en"
                 = link_to '#', class: 'nav-link dropdown-toggle', id: "navbarDropdownMenuLink", "data-bs-toggle": "dropdown", role: "button", aria: { expanded: "false" }
                   i.fas.fa-user
                 .dropdown-menu.dropdown-menu-end aria-labelledby="navbarDropdownMenuLink"
+                  = link_to 'Admin', rails_admin_path, class: 'dropdown-item'
                   = link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item'
                   = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item'
     = render partial: 'flash', flash: flash
