--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,11 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import "bootstrap/scss/bootstrap";
+ @import "bootstrap/scss/bootstrap";
+ // TomSelect Fix https://github.com/orchidjs/tom-select/pull/601
+$select-color-dropdown-border-top: $input-border-color;
+$select-color-dropdown: $body-bg;
+$input-border-width: $border-width;
 @import "tom-select/dist/scss/tom-select.bootstrap5";
 @import "segments";
 
